# ga_learning

./: CMakeLists.txt  function.cpp  main.cu
opencv2/: calib3d.hpp  core.hpp  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  photo.hpp  stitching.hpp  videoio.hpp
opencv2/core/: affine.hpp  base.hpp  core_c.h  cuda.hpp  cvstd.hpp  directx.hpp  dualquaternion.hpp  fast_math.hpp  mat.hpp  ocl.hpp  opengl.hpp  operations.hpp  optim.hpp  persistence.hpp  quaternion.hpp  quaternion.inl.hpp  saturate.hpp  types_c.h  utility.hpp
opencv2/core/cuda/: vec_math.hpp
opencv2/core/hal/: intrin_lasx.hpp  intrin_lsx.hpp  intrin_sse.hpp  intrin_vsx.hpp  intrin_wasm.hpp
opencv2/core/parallel/: parallel_backend.hpp
opencv2/core/utils/: instrumentation.hpp  trace.hpp
opencv2/dnn/: all_layers.hpp  dnn.hpp  layer.details.hpp  layer.hpp
opencv2/dnn/utils/: debug_utils.hpp
opencv2/flann/: any.h  dynamic_bitset.h  hierarchical_clustering_index.h  kmeans_index.h  matrix.h  simplex_downhill.h
opencv2/gapi/: core.hpp  garg.hpp  gcommon.hpp  gcompiled.hpp  gcompiled_async.hpp  gcompoundkernel.hpp  gcomputation.hpp  gcomputation_async.hpp  gkernel.hpp  gstreaming.hpp  gtyped.hpp  imgproc.hpp  infer.hpp  media.hpp  rmat.hpp  s11n.hpp  stereo.hpp
opencv2/highgui/: highgui_c.h
opencv2/imgproc/: bindings.hpp  imgproc_c.h  segmentation.hpp
opencv2/objdetect/: aruco_board.hpp  aruco_detector.hpp  aruco_dictionary.hpp  charuco_detector.hpp
opencv2/photo/: cuda.hpp
opencv2/video/: tracking.hpp
opencv2/videoio/: videoio_c.h
(+21 files in other folders)
